# agente_hibrido_texto_Kimi_rag_Gemini

./: .dockerignore  .env.example  .env.template  .gitignore  AGENTS.md  CAMBIOS_RAG.md  DEPLOY_SWAGGER_SECURITY.md  Dockerfile  GUIA_RAPIDA.md  LIMPIEZA_FINAL.md  LIMPIEZA_PROYECTO.md  README.md  alembic.ini  deploy_orangepi5.sh  docker-compose.yml  gunicorn.conf.py  pyproject.toml  pytest.ini  test_hibrido_mejorado.py
.github/workflows/: deploy.yml
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: bd01f37689db_initial_schema_with_all_tables.py
backup_obsoletos_20251006_224158/: archivos_backup.txt  informe_migracion.md
doc/: ARCHITECTURE_AUDIT.md  ARCHITECTURE_IMPROVEMENTS.md  ARQUITECTURE_VIOLATIONS_REPORT.md  BUGFIX_CACHE_OVERWRITES_RAG.md  BUGFIX_CHAT_500_ERROR.md  BUGFIX_EMBEDDINGS_DIMENSIONS.md  BUGFIX_RAG_INTEGRATION.md  BUGFIX_SESSION_COMPLETE.md  CHANGELOG_2025_09_29.md  CLEANUP_PRODUCTION.md  DASHBOARD_METRICS.md  DAY2_COMPLETE.md  DAY3_COMPLETE.md  DEPLOYMENT_ORANGEPI.md  DEPLOYMENT_SECURITY.md  DEPLOYMENT_SUMMARY.md  DEPLOY_ORANGEPI5.md  ENVIRONMENT_SETUP.md  GIT_COMMANDS.md  GUNICORN_VS_UVICORN.md  HEXAGONAL_REFACTOR_PLAN.md  IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INTEGRACION_BEAR_API.md  LLM_GATEWAY.md  MEJORAS_FUTURAS.md  MEJORA_RESPUESTAS_AGENTES.md  NEXT_STEPS.md  PROJECT_OVERVIEW.md  PYTHON_AI_GUIDELINES.md  QUICK_START_JUNIOR.md  RAG_ADAPTATIVO_GEMINI.md  RAG_LIBROS_TECNICOS_GRANDES.md  RAG_SYSTEM_COMPLETE.md  README.md  REFACTORING.md  REFACTORING_COMPLETE.md  REFACTORING_CONTEXT.md  REFACTORING_PROMPTS.md  (+11 more)
docs/: APRENDIZAJE_GIT_DOCKER.md  ARCHIVOS_PARA_GITHUB.md  DEPLOYMENT.md  DEPLOY_MANUAL.md  DEPLOY_ORANGEPI.md  DOCKER_BUILD_OPTIMIZADO.md  GUARDIAN_BYPASS_CLI.md  LIMPIEZA_DOCKER_Y_OPTIMIZACION.md  MEJORAS_HIBRIDO.md  MEJORAS_RAG_GEMINI.md  OPTIMIZACION_DOCKER_PRODUCCION.md  OPTIMIZACION_RAM_RUNTIME.md  README.md  RESUMEN_LIMPIEZA.md  RESUMEN_MEJORAS.md
pages/: 1_📊_Dashboard.py  2_🔍_Superagent.py  4_📊_dashboard.py
scripts/: README.md  clean_empty_sessions.py  cleanup_project.py  debug_rag_flow.py  demo_token_savings.py  deploy_orangepi.sh  find_duplicates.py  generate_secret_key.py  migrate_embeddings_add_metadata.py  migrate_embeddings_dimension.py  migrate_embeddings_to_3072.py  start_dev.sh  test_rag_improvements.py  verify_tables.sql
scripts/database/: check_db_tables.sh  clear_error_message.py  init_db.py
scripts/deployment/: cleanup_for_production.sh  start_prod.sh
scripts/dev/: activate.sh  verify_deployment.py
scripts/development/: analyze_architecture.py  check_dependencies.py  check_hexagonal_architecture.py
scripts/testing/: local_llm_gateway_client.py  test_rag.py
src/: main.py
src/adapters/: dependencies.py
src/adapters/agents/: circuit_breaker.py  deepseek_adapter.py  gemini_adapter.py  gemini_client.py  gemini_embeddings_adapter.py  groq_adapter.py  groq_client.py  local_llm_client.py  prompt_manager.py  prompts.py  retry.py
src/adapters/api/: auth_dependency.py  exception_handlers.py  metrics.py
src/adapters/config/: llm_router.py  settings.py
src/adapters/db/: chat.py  chat_repository_adapter.py  database.py  document_mapper.py  domain_repository.py  embeddings_models.py  embeddings_repository.py  file_models.py  file_repository_adapter.py  init.py  message.py  metrics_models.py  pg_engine.py  repository.py  user_repository.py
src/adapters/repositories/: metrics_repository.py
src/adapters/security/: README.md  __init__.py  argon2_hasher.py  jwt_token_service.py
src/adapters/streamlit/: Home.py  app.py  app_backup_original.py  styles.py
src/adapters/tools/: bear_python_tool.py  qwen_guardian_client.py
src/application/services/: auth_service.py  chat_service.py  chat_service_hibrido_mejorado.py  chat_service_v2.py  domain_chat_service.py  embeddings_service.py  embeddings_service_v2.py  file_processing_service.py  guardian_service.py  jwt_service.py  metrics_service.py  password_service.py  rag_context_service.py
src/domain/: __init__.py
src/domain/exceptions/: domain_exceptions.py  guardian_exceptions.py
src/domain/models/: __init__.py  chat_models.py  file_models.py  metrics_models.py  python_search_models.py  user.py
src/domain/ports/: __init__.py  auth_port.py  embeddings_port.py  file_repository_port.py  (+5 more)
src/scripts/: init_db.py  local_llm_gateway_client.py  test_llm_gateway_direct.py
tests/: README.md  baseline_prompts.json  baseline_responses.json  baseline_tokens.json  conftest.py  mocks.py  test_bear_python_tool.py  test_chat_service.py  test_embeddings_day3.py  test_health_endpoint.py  test_health_monitor.py  test_hexagonal_day2.py  test_migracion_completa.py  test_prompt_baseline.py  test_prompt_cache.py  test_rag_simple.py  test_rag_system.py  test_security.py
(+34 files in other folders)
