[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proyecto-hexagonal"
version = "0.1.0"
description = "Proyecto con arquitectura hexagonal"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "gunicorn>=21.2.0",
    "streamlit>=1.39.0,<1.40.0",
    "pydantic>=2.6.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "sqlmodel>=0.0.24",
    "pydantic-settings>=2.10.1",
    "pypdf>=4.2.0",
    "python-multipart>=0.0.9",
    "pathvalidate>=3.2.0",
    "reportlab>=4.2.0",
    "pgvector>=0.2.5",
    "numpy>=1.26.0",
    "psutil>=7.1.0",
    "plotly>=5.18.0",
    "pandas>=2.2.0",
    "slowapi>=0.1.9",
    "argon2-cffi>=23.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
    "pre-commit>=3.6.0",
]

[tool.hatch.build]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
    "pre-commit>=3.6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B904",  # raise ... from err (demasiado estricto para APIs)
    "E402",  # module level import not at top (necesario para evitar circular imports)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false
ignore_missing_imports = true
disable_error_code = ["arg-type", "assignment", "attr-defined", "call-overload", "union-attr", "var-annotated", "call-arg", "override", "operator", "valid-type", "misc", "return-value", "annotation-unchecked"]
